[gd_scene load_steps=3 format=3 uid="uid://cw7yeugihcmja"]

[ext_resource type="Script" path="res://Menu/Menu.levelselect.gd" id="1_8s6hg"]
[ext_resource type="Texture2D" uid="uid://wyu2q61dxwbo" path="res://FinalTextures/digitechconcept.png" id="2_722f5"]

[node name="Menu2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8s6hg")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 465.0
offset_top = 300.0
offset_right = 689.0
offset_bottom = 429.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="playtest" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play test world
"

[node name="mainlevel" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main game level 1
(incomplete)"

[node name="back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -498.0
offset_top = -447.0
offset_right = 1858.0
offset_bottom = 1385.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
mouse_filter = 2
texture = ExtResource("2_722f5")

[connection signal="pressed" from="MarginContainer/VBoxContainer/playtest" to="." method="_on_playtest_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/mainlevel" to="." method="_on_mainlevel_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/back" to="." method="_on_back_pressed"]
